<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_book_cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/books_main"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Book_Tittle"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="16dp" />

        <Button
            android:id="@+id/book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Info_author"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp" />

        <Button
            android:id="@+id/btn_search_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/Search_book"
            android:textStyle="bold"
            android:padding="16dp" />
        <EditText
            android:id="@+id/et_search_book"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1" />

        <TextView
            android:id="@+id/BookNumberED"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Book_Number"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp" />
        <EditText
            android:id="@+id/nummerBook"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:inputType="number"
            android:maxLength="50"
            android:maxLines="1" />

        <Button
            android:id="@+id/url_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Web_Search"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="16dp" />

        <Button
            android:id="@+id/buch_speichern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Save_book" />

    </LinearLayout>

</ScrollView>